--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,6 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML
-
-server.contextPath=/annspetitions
-logging.level.: DEBUG
+server.servlet.context-path=/annspetitions
 server.port=9090
+logging.level.: DEBUG
